add labels to every post

--- a/posts/templates/TAing.html
+++ b/posts/templates/TAing.html
@@ -1,6 +1,8 @@
 
 {% extends "base.html" %}
 {% block content %}
+<span style="float:right;" class="label label-primary">2016-06-19</span>
+<span style="float:right;" class="label label-info">unfinished</span>
 <h2>My Experiences as an Undergraduate TA</h2>
 
 <p>This will be a post on my 4 semesters of being an
