--- a/posts/templates/cloudstorage.html
+++ b/posts/templates/cloudstorage.html
@@ -1,6 +1,8 @@
 
 {% extends "base.html" %}
 {% block content %}
+<span style="float:right;" class="label label-primary">2016-06-23</span>
+<span style="float:right;" class="label label-info">research</span>
 <h1>Object vs Block vs File Level Storage Protocols</h1>
 
 <p>For the past four weeks, I have been at IBM Research digging 
