--- a/posts/templates/expect.html
+++ b/posts/templates/expect.html
@@ -1,6 +1,8 @@
 
 {% extends "base.html" %}
 {% block content %}
+<span style="float:right;" class="label label-primary">2016-06-23</span>
+<span style="float:right;" class="label label-info">linux</span>
 <h1>Expect: The Unix Tool</h1>
 
 <p>CLI automation is nothing new. Linux users and programmers 
