--- a/posts/templates/hardware4cs.html
+++ b/posts/templates/hardware4cs.html
@@ -1,6 +1,8 @@
 
 {% extends "base.html" %}
 {% block content %}
+<span style="float:right;" class="label label-primary">2016-06-21</span>
+<span style="float:right;" class="label label-info">unfinished</span>
 <h2>Why Hardware Knowledge is Important in Computer Science Education</h2>
 
 <p>This will eventually be a post on why I think hardware comprehension 
