--- a/posts/templates/dublincoffee.html
+++ b/posts/templates/dublincoffee.html
@@ -1,6 +1,8 @@
 
 {% extends "base.html" %}
 {% block content %}
+<span style="float:right;" class="label label-primary">2016-06-19</span>
+<span style="float:right;" class="label label-info">unfinished</span>
 <h2>Best Coffee in Dublin, Ireland</h2>
 
 <p>Eventually this will be a post on my favorite
