--- a/posts/templates/ronfagin.html
+++ b/posts/templates/ronfagin.html
@@ -1,6 +1,8 @@
 
 {% extends "base.html" %}
 {% block content %}
+<span style="float:right;" class="label label-primary">2016-06-19</span>
+<span style="float:right;" class="label label-info">unfinished</span>
 <h1>Notes</h1>
 
 <p>role of beauty in research</p>
