--- a/posts/templates/PLDI16.html
+++ b/posts/templates/PLDI16.html
@@ -1,8 +1,8 @@
 
 {% extends "base.html" %}
 {% block content %}
-<span style="float:right;" class="label label-primary">2016-06-19</span>
-<span style="float:right;" class="label label-info">unfinished</span>
+<span class="label label-primary">2016-06-19</span>
+<span class="label label-info">unfinished</span>
 <h1>Adventures at PLDI 2016</h1>
 
 <p>This will eventually be a post about my experiences
