--- a/posts/templates/ubuntu_v_arch.html
+++ b/posts/templates/ubuntu_v_arch.html
@@ -1,8 +1,8 @@
 
 {% extends "base.html" %}
 {% block content %}
-<span style="float:right;" class="label label-primary">2016-06-19</span>
-<span style="float:right;" class="label label-info">unfinished</span>
+<span class="label label-primary">2016-06-19</span>
+<span class="label label-info">unfinished</span>
 <h2>Ubuntu vs Arch Linux</h2>
 
 <p>This will be a post on my experiences with the two 
