another typo ugh

--- a/posts/templates/staticsitegenerator.html
+++ b/posts/templates/staticsitegenerator.html
@@ -129,7 +129,7 @@ What's also neat? Acrylamid supports TeX hyphenation filters,
 summarizing filters, and acronym-detection. And they're even on 
 <a href="http://freenode.net/">Freenode</a>, <code>#acrylamid</code>.</p>
 
-<h2>Creating You Own Static Site Generator</h2>
+<h2>Creating Your Own Static Site Generator</h2>
 
 <p>If you have a very specific goal in mind, or none of those 
 generators really do what you want, or you just feel trapped 
