remove annoying footer line

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
 
 	</div>
       	{% block footer %}
-    		<footer class="footer">
+    		<footer>
       			<center>&copy; Breanna Devore-McDonald. Built with <a href="https://www.python.org/">Python</a>. June 2016</center>
     		</footer>
 	  	{% endblock %}
