--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -1541,8 +1541,8 @@ samp {
 code {
   padding: 2px 4px;
   font-size: 90%;
-  color: #c7254e;
-  background-color: #f9f2f4;
+  color: #00af87;
+  background-color: #dafffa;
   border-radius: 4px;
 }
 kbd {
