--- a/templates/base.html
+++ b/templates/base.html
@@ -21,10 +21,10 @@
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
 			  <ul class="nav navbar-nav">
-		<a class="navbar-brand"href="/index.html">$_Bashful Bytes</a>
+		<a class="navbar-brand"href="/">$_Bashful Bytes</a>
 			  </ul>
 			  <ul class="nav navbar-nav navbar-right">
-				<li><a href="/index.html">Blog</a></li>
+				<li><a href="/">Blog</a></li>
   				<li><a href="/pages/about.html">About</a></li>
 			  </ul>
 		  </div>
